# engram-memory

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTIONS.md  HIRING.md  IMPLEMENTATION.md  Makefile  README.md  install.cmd  install.ps1  install.sh  pyproject.toml  requirements.txt  slack_integration.py  vercel.json
.claude/skills/: set-up-engram-for-my-team.md
.github/workflows/: engram-scan.yml
.kiro/hooks/: engram-autocommit.json
.kiro/settings/: mcp.json
.kiro/steering/: engram.md
api/: auth.py  billing.py  dashboard_page.py  index.py  install.py  mcp.py  requirements.txt  workspace.py
benchmark/: README.md  conflict_benchmark.py
docs/: BENCHMARKS_SURVEY.md  CHAOS_ENGINEERING.md  CLIENT_SIDE_ENCRYPTION.md  CONTROLLED_STUDY.md  DATA_RESIDENCY.md  IMPLEMENTATION.md  LITERATURE.md  MCP_TOOL_AUDIT.md  N8N_ZAPIER.md  PRICING_TIERS.md  SOC2_COMPLIANCE.md  SSO_INTEGRATION.md  SUPPORTED_IDES.md  TEMPORARY_INVITE_LINKS.md  TROUBLESHOOTING.md  TYPESCRIPT_SDK.md
docs/integrations/: langchain.md
docs/pricing/: PRICING_PAGE.md
docs/quickstart/: README.md  claude-code.md  cursor.md  vscode-agent.md  vscode-copilot.md  windsurf.md  zed.md
src/engram/: cli.py  client.py  commit_check.py  dashboard.py  engine.py  federation.py  forgetting.py  importer.py  metering.py  overnight.py  postgres_storage.py  rest.py  schema.py  secrets.py  server.py  storage.py  suggester.py  tui.py  workspace.py
src/engram/integrations/: __init__.py  (+1 more)
tests/: TESTS.md  test_cli_commit_check.py  test_cli_conflicts.py  test_cli_import.py  test_cli_install.py  test_cli_search.py  test_client.py  test_commit_check.py  test_conflicts.py  test_dashboard.py  test_engine.py  test_federation.py  test_forgetting.py  test_install_sh.py  test_langchain_adapter.py  test_metering.py  test_pr_scanner.py  test_rest.py  test_secrets.py  test_storage.py  test_tkg.py  test_tool_versioning.py  test_verify.py  test_workspace.py  test_workspace_isolation.py
(+3 files in other folders)
