[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram-team"
version = "0.1.1"
description = "Multi-agent memory consistency for engineering teams."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Engram Contributors" }]
keywords = ["mcp", "agents", "memory", "consistency", "conflict-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "mcp>=1.9.0",
    "aiosqlite>=0.20.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "questionary>=2.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
    "aiohttp>=3.9.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
# Team mode: PostgreSQL backend + pgvector
team = [
    "asyncpg>=0.29.0",
]
onnx = ["onnxruntime>=1.18.0"]
suggestions = ["anthropic>=0.40.0"]
toml = ["tomli>=2.0.0", "tomli-w>=1.0.0"]  # For Codex IDE support
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.5.0",
]
# Install everything
all = [
    "asyncpg>=0.29.0",
    "onnxruntime>=1.18.0",
    "anthropic>=0.40.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
engram = "engram.cli:main"

[project.urls]
Homepage = "https://github.com/Agentscreator/Engram"
Repository = "https://github.com/Agentscreator/Engram"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
